syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.ticket";
option java_outer_classname = "EventTicket";

package ticket;

service TicketService {
    rpc BookTicket (EventRequest) returns (Ticket) {};
    rpc CancelTicket (TicketRequest) returns (TicketResponse) {};
    rpc GetTicket (TicketRequest) returns (Ticket) {};
    rpc GetTickets (EventRequest) returns (stream Ticket) {}
}

message EventRequest {
    string event_id = 1;
    string user_id = 2;
}

message TicketRequest {
    string ticket_id = 1;
    string user_id = 2;
}

message TicketResponse {
    string message = 1;
}

message Ticket {
    string ticket_id = 1;
    string user_id = 2;
    string event_id = 3;
    int64 date_purchased = 4;
    enum StatusCode {
        PENDING = 0;
        BOOKED = 1;
        CANCELLED = 2;
        INVALID = 3;
    }
    StatusCode status = 5;
}